--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -41,11 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AspectoSeguridadLaboralDatos.cs" />
     <Compile Include="BitacoraAccionesDatos.cs" />
     <Compile Include="ConexionDatos.cs" />
     <Compile Include="PersonaEmergenciaDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolicitudTeletrabajoDatos.cs" />
+    <Compile Include="UnidadTrabajoDatos.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entidades\Entidades.csproj">
