--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -44,8 +44,11 @@
     <Compile Include="AspectoSeguridadLaboralDatos.cs" />
     <Compile Include="BitacoraAccionesDatos.cs" />
     <Compile Include="ConexionDatos.cs" />
+    <Compile Include="PerfilLaboralDatos.cs" />
+    <Compile Include="PerfilPuestoDatos.cs" />
     <Compile Include="PersonaEmergenciaDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PuestoTeletrabajoDatos.cs" />
     <Compile Include="SolicitudTeletrabajoDatos.cs" />
     <Compile Include="UnidadTrabajoDatos.cs" />
   </ItemGroup>
