--- a/Servicios/Servicios.csproj
+++ b/Servicios/Servicios.csproj
@@ -41,8 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AspectoSeguridadLaboralServicio.cs" />
+    <Compile Include="PerfilLaboralServicio.cs" />
+    <Compile Include="PerfilPuestoServicio.cs" />
     <Compile Include="PersonaEmergenciaServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PuestoTeletrabajoServicio.cs" />
     <Compile Include="UnidadTrabajoServicios.cs" />
   </ItemGroup>
   <ItemGroup>
